# tetra_sand

./: .gitignore  CMakeLists.txt  ImGuiColorTextEdit  Licence.md  Makefile  README.md  clean.sh  imgui.ini  laak  libigl  makebuild_links.sh
audio/: CMakeLists.txt  rtaudio
audio/include/: audio.h
audio/src/: audio.cc
cgmath/: CMakeLists.txt  Makefile  cmake_install.cmake
cgmath/include/: complex.h  mat3.h  mat4.h  utils.h  vec2.h  vec3.h  vec4.h
cgmath/src/: complex.cc  mat3.cc  mat4.cc  utils.cc  vec2.cc  vec3.cc  vec4.cc
include/: Scene.h  SceneManager.h  SceneStart.h  WindowManager.h  scene.h  scene_manager.h  scene_start.h  scene_vertex.h  window_mgr.h  xek.h
misc/: xek.vec2
misc/media/: record.raw
shaders/: .cube_texture.vert.swp  .grid.vert.swp  bkpgrid  circle.frag  circle.vert  circle_grid.vert  cube.frag  cube.vert  cube_texture.frag  cube_texture.vert  depth.frag  final_scene.frag  final_scene.vert  grid.vert  palmera.frag  palmtree.frag  simple.frag  simple.vert  solid_color.frag  sphere.vert  water.frag  water.vert
src/: SceneManager.cc  SceneStart.cc  WindowManager.cc  imgui.ini  main.cc  scene_manager.cc  scene_start.cc  scene_vertex.cc  window_mgr.cc
util/: CMakeLists.txt  Makefile  cmake_install.cmake
util/include/: image_handler.h  load_vec.h  stb_image_write.h
util/src/: image_handler.cc  ttime.cc
